update Recommend algorithm and fix save post -savePost: fix add save more than 2 -collect behavior user: view, save, apply -add async for send mail and collect behavior